--- a/mvc/views/informatica/agregar_usuario.html
+++ b/mvc/views/informatica/agregar_usuario.html
@@ -21,9 +21,9 @@
         <button class="btn d-md-none d-block close-btn me-2"><i class="bi bi-x-lg"></i></button>
       </div>
       <ul class="list-unstyled px-2">
-        <li class="active"><a href="#" class="text-decoration-none px-3 py-2 d-block">Agregar Usuario</a></li>
-        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Modificar Usuario</a></li>
-        <li class="salir"><a href="#" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
+        <li class="active"><a href="/informatica/agregar-usuario" class="text-decoration-none px-3 py-2 d-block">Agregar Usuario</a></li>
+        <li class=""><a href="/informatica/modificar-usuario"" class="text-decoration-none px-3 py-2 d-block">Modificar Usuario</a></li>
+        <li class="salir"><a href="# class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
       </ul>
     </div>
     <div class="content">
@@ -43,28 +43,29 @@
           <div class="d-flex">
             <h1 class="text-body-primary">Agregar Usuario</h1>
           </div>
-          <form class="row g-3 justify-content-evenly">
+          <form class="row g-3 justify-content-evenly" method="post">
             <div class="row g-3 justify-content-evenly">
               <div class="col-md-4">
                 <label for="inputEmail4" class="form-label">Correo Electrónico</label>
-                <input type="email" placeholder="correo@email.com" class="form-control" id="inputEmail4">
+                <input type="email" placeholder="correo@email.com" class="form-control" name="inputEmail14">
               </div>
               <div class="col-md-4">
                 <label for="inputPassword4" class="form-label">No. Control</label>
-                <input type="number" placeholder="501" class="form-control" id="inputControl14">
+                <input type="number" placeholder="501" class="form-control" name="inputControl14">
               </div>
             </div>
             <div class="row g-3 justify-content-evenly">
               <div class="col-md-4 align-items-">
                 <label for="inputAddress" class="form-label">Nivel</label><br>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-evenly">
-                  <button class="btn" type="button" data-bs-toggle="button">Administrador</button>
-                  <button class="btn" type="button" data-bs-toggle="button">Operador</button>
+                  <button type="submit" class="btn admin"data-bs-toggle="button" value="administrador">Administrador</button>
+                  <button type="submit" class="btn operador" data-bs-toggle="button" value="operador">Operador</button>
+                  <input type="hidden" id="boton-valor" name="nivel" value="">
                 </div>
               </div>
               <div class="col-md-4">
                 <label for="inputAddress2" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="inputPassword14" placeholder="********">
+                <input type="password" class="form-control" name="inputPassword14" placeholder="********">
               </div>
             </div>
             <div class="row g-5 justify-content-center">
@@ -77,14 +78,9 @@
   </div>
   <!-- Scripts Menu -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="../../../static/js/scripts.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
   <script>
-    $('.open-btn').click(function () {
-      $('.sidebar').addClass('active');
-    });
-    $('.close-btn').click(function () {
-      $('.sidebar').removeClass('active');
-    });
   </script>
 </body>
 
