--- a/mvc/views/informatica/modificar_usuario.html
+++ b/mvc/views/informatica/modificar_usuario.html
@@ -21,9 +21,9 @@
         <button class="btn d-md-none d-block close-btn me-2"><i class="bi bi-x-lg"></i></button>
       </div>
       <ul class="list-unstyled px-2">
-        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Agregar Usuario</a></li>
-        <li class="active"><a href="#" class="text-decoration-none px-3 py-2 d-block">Modificar Usuario</a></li>
-        <li class="salir"><a href="#" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
+        <li class=""><a href="/informatica/agregar-usuario" class="text-decoration-none px-3 py-2 d-block">Agregar Usuario</a></li>
+        <li class="active"><a href="/informatica/modificar-usuario"" class="text-decoration-none px-3 py-2 d-block">Modificar Usuario</a></li>
+        <li class="salir"><a href="# class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
       </ul>
     </div>
     <div class="content">
