--- a/mvc/views/informatica/modificar_usuario.html
+++ b/mvc/views/informatica/modificar_usuario.html
@@ -1,3 +1,4 @@
+$def with (users, boton_valor = None)
 <!DOCTYPE html>
 <html lang="es">
 
@@ -21,9 +22,11 @@
         <button class="btn d-md-none d-block close-btn me-2"><i class="bi bi-x-lg"></i></button>
       </div>
       <ul class="list-unstyled px-2">
-        <li class=""><a href="/informatica/agregar-usuario" class="text-decoration-none px-3 py-2 d-block">Agregar Usuario</a></li>
-        <li class="active"><a href="/informatica/modificar-usuario"" class="text-decoration-none px-3 py-2 d-block">Modificar Usuario</a></li>
-        <li class="salir"><a href="# class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
+        <li class=""><a href="/informatica/agregar-usuario" class="text-decoration-none px-3 py-2 d-block">Agregar
+            Usuario</a></li>
+        <li class="active"><a href="/informatica/modificar-usuario" class=" text-decoration-none px-3 py-2
+            d-block">Modificar Usuario</a></li>
+        <li class="salir"><a href="#" class=" text-decoration-none px-3 py-2 d-block">Salir</a></li>
       </ul>
     </div>
     <div class="content">
@@ -41,25 +44,31 @@
         <!-- Aqui va el contenido -->
         <div class="d-flex flex-column justify-content-center align-items-center">
           <div class="d-flex">
-            <h1 class="text-body-primary">Agregar Usuario</h1>
+            <h1 class="text-body-primary">Modificar Usuario</h1>
           </div>
-          <form class="row g-3 justify-content-evenly">
+          <form class="row g-3 justify-content-evenly" method="post">
             <div class="row g-3 justify-content-evenly">
               <div class="col-md-4">
-                <label for="inputEmail4" class="form-label">Correo Electronico</label>
-                <input type="email" placeholder="correo@email.com" class="form-control" id="inputEmail4">
+                <label for="inputEmail4" class="form-label">Correo Electrónico</label>
+                <select id="selectUsuario" class="form-select">
+                  <option selected>Selecciona un usuario</option>
+                  $for user in users
+                    <option value="$user.val().get('nivel')" id="$user.val().get('no_control')" class="$user.key()">$user.val().get('correo')</option>
+                </select>
+                <input type="hidden" id="select-valor" name="id" value="">
               </div>
               <div class="col-md-4">
-                <label for="inputAddress2" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="inputPassword14" placeholder="********">
+                <label for="inputAddress2" class="form-label">No. Control</label>
+                <input type="number" class="form-control" name="inputControl14" id="no_control" value="">
               </div>
             </div>
             <div class="row g-3 justify-content-evenly">
               <div class="col-md-4 align-items-">
                 <label for="inputAddress" class="form-label">Nivel</label><br>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-evenly">
-                  <button class="btn active" type="button" data-bs-toggle="button">Administrador</button>
-                  <button class="btn" type="button" data-bs-toggle="button">Operador</button>
+                  <button type="submit" class="btn admin"data-bs-toggle="button" value="administrador">Administrador</button>
+                  <button type="submit" class="btn operador" data-bs-toggle="button" value="operador">Operador</button>
+                  <input type="hidden" id="boton-valor" name="nivel" value="">
                 </div>
               </div>
               <div class="col-md-4">
@@ -78,15 +87,8 @@
   </div>
   <!-- Scripts Menu -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="../../../static/js/scripts.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-  <script>
-    $('.open-btn').click(function () {
-      $('.sidebar').addClass('active');
-    });
-    $('.close-btn').click(function () {
-      $('.sidebar').removeClass('active');
-    });
-  </script>
 </body>
 
 </html>
