--- a/mvc/views/operador/control_pozo.html
+++ b/mvc/views/operador/control_pozo.html
@@ -1,27 +1,32 @@
+$def with(pozos)
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Control del Pozo</title>
   <link rel="icon" href="/static/img/favicon.png" type="image/x-icon">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="/static/css/style.css">
   <link rel="stylesheet" href="/static/css/control-remoto.css">
 </head>
+
 <body>
   <div class="main-container d-flex">
     <div class="sidebar" id="side_nav">
       <div class="header-box justify-content-between px-2 pt-3 pb-4 d-flex">
-        <img class="logo-web" src="/static/img/logo.png"/>
+        <img class="logo-web" src="/static/img/logo.png" />
         <button class="btn d-md-none d-block close-btn me-2"><i class="bi bi-x-lg"></i></button>
       </div>
       <ul class="list-unstyled px-2">
-        <li class=""><a href="/operador/lista-pozos" class="text-decoration-none px-3 py-2 d-block">Pozos</a></li>
-        <li class="active"><a href="/operador/control-pozo" class="text-decoration-none px-3 py-2 d-block">Control Remoto</a></li>
-        <li class=""><a href="/operador/lista-usuarios" class="text-decoration-none px-3 py-2 d-block">Usuarios</a></li>
-        <li class=""><a href="/operador/generar-reporte" class="text-decoration-none px-3 py-2 d-block">Reportes</a></li>
+        <li class=""><a href="/admin/lista-pozos" class="text-decoration-none px-3 py-2 d-block">Pozos</a></li>
+        <li class="active"><a href="/admin/control-pozo" class="text-decoration-none px-3 py-2 d-block">Control
+            Remoto</a></li>
+        <li class=""><a href="/admin/lista-usuarios" class="text-decoration-none px-3 py-2 d-block">Usuarios</a></li>
+        <li class=""><a href="/admin/generar-reporte" class="text-decoration-none px-3 py-2 d-block">Reportes</a></li>
         <li class="salir"><a href="/logout" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
       </ul>
     </div>
@@ -38,55 +43,81 @@
       </nav>
       <div class="dashboard-content px-3 pt-4">
         <!-- Aqui va el contenido -->
-        <div class="d-flex flex-column" id="general">
-          <div class="d-flex justify-content-center">
-            <h1 class="titulo">Control Remoto</h1>
-          </div>
-          <div class="d-flex justify-content-center">
-            <select class="form-select" aria-label="Default select example">
-              <option selected>Selecciona un pozo</option>
-              <option value="1">Pozo 1</option>
-              <option value="2">Pozo 2</option>
-              <option value="3">Pozo 3</option>
-            </select>
-          </div>
-          <div class="d-flex justify-content-around" id="contenedor">
-            <div class="d-flex flex-column" id="componentes">
-              <div class="d-flex justify-content-center">
-                <p class="fs-5 fw-bold">Horario Programado</p>
-              </div>
-              <div class="d-flex justify-content-center">
-                <p class="fs-5">08:00 - 20:00</p>
-              </div>
-              <div class="d-flex justify-content-center">
-                <p class="text-body-secondary"><a href="/operador/cambiar-horario" class="text-reset">Cambiar horario</a>
-                </p>
-              </div>
+        <div class="d-flex justify-content-center" id="general">
+          <div class="d-flex flex-column">
+            <div class="d-flex justify-content-center">
+              <h1 class="titulo">Control Remoto</h1>
             </div>
-            <div class="d-flex flex-column" id="componentes">
-              <div class="d-flex justify-content-center">
-                <p class="fs-5 fw-bold">Apagar</p>
+            <div class="d-flex justify-content-center">
+              <select class="form-select" aria-label="Default select example" id="selectPozo">
+                <option selected>Selecciona un pozo</option>
+                $for pozo in pozos:
+                <option value="$pozo.key()" id="$pozo.val().get('estado_pozo').get('estado')"
+                  class="$pozo.val().get('horario').get('h_apagado') - $pozo.val().get('horario').get('h_encendido')">
+                  $pozo.val().get("nombre")</option>
+              </select>
+            </div>
+            <div class="d-flex justify-content-around" id="contenedor">
+              <div class="d-flex flex-column" id="componentes">
+                <div class="d-flex justify-content-center">
+                  <p class="fs-5 fw-bold">Horario Programado</p>
+                </div>
+                <div class="d-flex justify-content-center">
+                  <p class="fs-5" id="horario"> hh:mm:ss - hh:mm:ss </p>
+                </div>
+                <div class="d-flex justify-content-center">
+                  <p class="text-body-secondary"><a href="/operador/cambiar-horario" class="text-reset">Cambiar horario</a>
+                  </p>
+                </div>
               </div>
-              <div class="container">
-                <input type="checkbox" id="check">
-                <label for="check" class="button"></label>
+              <div class="d-flex flex-column" id="componentes">
+                <div class="d-flex justify-content-center">
+                  <p class="fs-5 fw-bold">Apagar</p>
+                </div>
+                <div class="form-check form-switch d-flex justify-content-center">
+                  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                </div>
+                <input type="hidden" id="estado" name="estado" value="">
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- Scripts Menu -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-  <script>
-    $('.open-btn').click(function () {
-      $('.sidebar').addClass('active');
-    });
-    $('.close-btn').click(function () {
-      $('.sidebar').removeClass('active');
-    });
-  </script>
+    <!-- Scripts Menu -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="../../../static/js/scripts.js"></script>
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
+      import { getDatabase, ref, update } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
+
+      // Your web app's Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyDSNosUdU1keJfy1LiUWLRHt28xMvFolXo",
+        authDomain: "sienapa-734e9.firebaseapp.com",
+        databaseURL: "https://sienapa-734e9-default-rtdb.firebaseio.com",
+        projectId: "sienapa-734e9",
+        storageBucket: "sienapa-734e9.appspot.com",
+        messagingSenderId: "538109518725",
+        appId: "1:538109518725:web:cc5781087804a219ed5aec"
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const db = getDatabase(app);
+
+      function updateData(){
+        const selectElement = document.getElementById('selectPozo');
+        const estadoElement = document.getElementById('estado');
+        update(ref(db, 'data/pozos/' + selectElement.value + '/estado_pozo'), {
+          estado: parseInt(estadoElement.value)
+        });
+      }
+      document.getElementById('flexSwitchCheckDefault').addEventListener('change', function () {
+        updateData();
+      });
+    </script>
 </body>
+
 </html>
