--- a/mvc/views/operador/lista_usuarios.html
+++ b/mvc/views/operador/lista_usuarios.html
@@ -23,11 +23,11 @@ $def with(users)
         <button class="btn d-md-none d-block close-btn me-2"><i class="bi bi-x-lg"></i></button>
       </div>
       <ul class="list-unstyled px-2">
-        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Pozos</a></li>
-        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Control Remoto</a></li>
-        <li class="active"><a href="#" class="text-decoration-none px-3 py-2 d-block">Usuarios</a></li>
-        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Reportes</a></li>
-        <li class="salir"><a href="#" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
+        <li class=""><a href="/operador/lista-pozos" class="text-decoration-none px-3 py-2 d-block">Pozos</a></li>
+        <li class=""><a href="/operador/control-pozo" class="text-decoration-none px-3 py-2 d-block">Control Remoto</a></li>
+        <li class="active"><a href="/operador/lista-usuarios" class="text-decoration-none px-3 py-2 d-block">Usuarios</a></li>
+        <li class=""><a href="/operador/generar-reporte" class="text-decoration-none px-3 py-2 d-block">Reportes</a></li>
+        <li class="salir"><a href="/logout" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
       </ul>
     </div>
     <div class="content">
