--- a/mvc/views/admin/generar_reporte.html
+++ b/mvc/views/admin/generar_reporte.html
@@ -40,19 +40,18 @@
         <!-- Aqui va el contenido -->
         <div class="container">
           <h2 class="title">Generar reporte de fallas</h2>
-          
-          <div class="form-group">
-            <label for="fechaInicio">Del:</label>
-            <div class="row">
-              <div class="col">
+          <form class="row g-3 justify-content-evenly" method="post">
+            <div class="row g-3 justify-content-evenly">
+              <div class="col-md-4">
+                <label for="fechaInicio">Del:</label>
                 <input type="date" id="fechaInicio" class="form-control">
               </div>
-              <label for="fechaFin">Hasta:</label>
-              <div class="col">
-                <input type="date" id="fechaFin" class="form-control">
+              <div class="col-md-4">
+                <label for="fechaInicio">Hasta:</label>
+                <input type="date" id="fechaInicio" class="form-control">
               </div>
             </div>
-          </div>
+
           <div>
           <button class="btn btn-primary btn-generate">Generar reporte</button>
           </div>
@@ -66,6 +65,7 @@
       </div>
     </div>
   </div>
+
   <!-- Scripts Menu -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
