--- a/mvc/views/admin/generar_pozo.html
+++ b/mvc/views/admin/generar_pozo.html
@@ -25,7 +25,7 @@
         <li class=""><a href="/admin/control-pozo" class="text-decoration-none px-3 py-2 d-block">Control Remoto</a></li>
         <li class=""><a href="/admin/lista-usuarios" class="text-decoration-none px-3 py-2 d-block">Usuarios</a></li>
         <li class=""><a href="/admin/generar-reporte" class="text-decoration-none px-3 py-2 d-block">Reportes</a></li>
-        <li class="salir"><a href="#" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
+        <li class="salir"><a href="/logout" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
       </ul>
     </div>
     <div class="content">
